CHANGELOG
=========
+-----------------------+
| VERSION: 0.6.0        |
+-----------------------+
BUGFIXES
30-05-06    Fixed bug where dbdo links creation task was missing from install, only
            available on rebuild
IMPROVEMENTS
30-05-06    Requiring greater than 8MB memory_limit is enforced
30-05-06    Added Captcha lib and example implementation in contactus module
            (Steven Stremciuc)


+-----------------------+
| VERSION: 0.6.0RC3     |
+-----------------------+
BUGFIXES
28-05-06    Fixed a bug where if caching was enabled, a URI parser was not executed
            which caused an error (AJ Tarachanowicz)
28-05-06    Fixed paths for RPC server
27-05-06    Fixed prob where environment data was not being saved correctly in PHP4
27-05-06    Logging debug level set correctly by default
26-05-06    Some error messages were being lost with incorrect redirects, now fixed.
26-05-06    Export rss filter chain descriptor modified in php.ini to be compatible
            with php4
09-05-06    Authentication and authorisation improved
07-05-06    Improved regex for detecting PHP CGI installs, php_sapi_name also
            returns apache2filter for CGI installs which is now detected (Mehdi Radgohar)
05-05-06    Added missing en.js file that caused TinyFCK to fail on some platforms
            (Ed Lea)
05-05-06    CLI invocation fixed, see
            http://trac.seagullproject.org/wiki/Howto/WorkingWithCliOrHttpRequests
04-05-06    Fixed bug where array internal pointer was not set for module list,
            caused SectionMgr to fail to list modules
03-05-06    Fixed cmdline installer, envRebuild.php
01-05-06    Installer password was wiped doing a rebuild, now fixed (Julien Casanova)

IMPROVEMENTS
28-05-06    Module generator improved (Gerald Fischer, AJ Tarachanowicz)
28-05-06    Improved integration of orgs and org types
28-05-06    Naming in Navigation section is friendlier
27-05-06    Factored out recording of login to Login observer