@@ -1,0 +1,14 @@
+<?php
+
+class TestFake {
+
+    function fake()
+    {
+        $this->_aActionsMapping = array(
+            'requiredMethod'    => array('foo')
+        );
+    }
+
+}
+
+?>
